grammar.js
    prepare: ($) => $.SpecialFunctionDeclaration,
    execute: ($) => seq('execute', '{', optional($.Block), '}'),

    transactionDeclaration: ($) =>
      prec(
        P.precedenceDeclaration,
        seq(
          'transaction',
          field('ParameterList', optional($.ParameterList)),
          '{',
          field('Fields', optional($.Fields)),
          field('prepare', optional($.prepare)),
          field('PreConditions', optional($.PreConditions)),
          optional(
            choice(
              field('execute', $.execute),
              seq(
                field('execute', $.execute),
                field('PostConditions', $._PostConditions),
              ),
              $._PostConditions,
              seq(
                field('PostConditions', $._PostConditions),
                field('execute', $.execute),
              ),
            ),
          ),
          '}',
        ),
      ),

    _PostConditions: ($) =>
      seq('post', '{', optional($._Conditions), '}'),
